# TraceArchitect

./: .env.example  .gitignore  LEARNING_ROADMAP.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: day1-setup.md  day2-json-mode.md  day3-tool-use.md  day4-dom-ax-tree.md
examples/: sample_login.html
scripts/: dom_snapshot.py  generate_testcase.py  tool_use_demo.py  verify_setup.py
src/tracearchitect/: __init__.py  domtree.py  ingest.py  testgen.py  tooluse.py
tests/: test_domtree.py  test_ingest.py  test_testgen.py  test_tooluse.py
