[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracearchitect"
version = "0.1.0"
description = "Ingest distributed tracing / telemetry data and perform architectural inference to reconstruct system structure and schemas from traces."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Abhinav Sharma", email = "777abhi@gmail.com" }]
keywords = ["tracing", "telemetry", "opentelemetry", "observability", "architecture"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/777abhi/TraceArchitect"
Repository = "https://github.com/777abhi/TraceArchitect"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
